implementacion de useState y creando componentes y revisnado su funcion

--- a/projects/00-hola-mundo/src/App.css
+++ b/projects/00-hola-mundo/src/App.css
@@ -40,13 +40,13 @@
 }
   
   .tw-followCard-button:hover {
-    opacity: .8;
+    background-color: #09f;
 }
   
   .tw-followCard-text {
     display: block;
 }
-  
+
   .tw-followCard-button.is-following {
     border: 1px solid #bbb;
     background: transparent;
